--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </md-item>
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensor-graph')">
-                        <md-button flex><span class="fa fa-line-chart"></span><span>Sensor Graphs</span></md-button>
+                        <md-button flex><span class="fa fa-line-chart"></span><span>Sensor Graph</span></md-button>
                     </md-item-content>
                 </md-item>
                 <md-item>
