--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -2,37 +2,35 @@
      ng-class="{'connection-lost-bg':vm.connectionLost}">
 
     <md-menu md-theme="{{themePrimaryButtons}}" style="margin: 0; position: absolute; right: 8px; top: 8px;">
-        <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()">
+        <md-button class="md-icon-button inline-action-button" ng-click="$root.openMenu($mdOpenMenu, $event, 'pointing-menu-content')">
             <md-icon md-menu-origin class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
         </md-button>
-        <md-menu-content width="4" style="padding-left: 16px;" ng-click="$event.stopPropagation()">
+        <md-menu-content width="4" style="padding-left: 16px;" id="pointing-menu-content" md-menu-disable-close>
             <md-menu-item>
                 <md-checkbox class="md-primary" ng-model="vm.useEquatorial" ng-init="vm.useEquatorial = true" ng-change="vm.redraw(true)"
-                    ng-click="$event.stopPropagation(); vm.delaydRedrawAfterViewChange()" md-menu-align-target>
+                    ng-click="vm.delaydRedrawAfterViewChange()">
                     <span>Use Equatorial Coordinates</span>
                 </md-checkbox>
             </md-menu-item>
             <md-menu-item>
-                <md-checkbox class="md-primary" ng-model="vm.showReceptorStates" ng-init="vm.showReceptorStates = true"
-                             ng-click="$event.stopPropagation()">
+                <md-checkbox class="md-primary" ng-model="vm.showReceptorStates" ng-init="vm.showReceptorStates = true">
                     <span>Show Receptor States</span>
                 </md-checkbox>
             </md-menu-item>
             <md-menu-item>
                 <md-checkbox class="md-primary" ng-model="vm.showNames" ng-change="vm.redraw(false)"
-                             ng-init="vm.showNames = false" ng-click="$event.stopPropagation()">
+                             ng-init="vm.showNames = false">
                     <span>Show Names</span>
                 </md-checkbox>
             </md-menu-item>
             <md-menu-item>
-                <md-checkbox class="md-primary" ng-model="vm.showTrails" ng-change="vm.redraw(false)"
-                             ng-click="$event.stopPropagation()">
+                <md-checkbox class="md-primary" ng-model="vm.showTrails" ng-change="vm.redraw(false)">
                     <span>Show Trails</span>
                 </md-checkbox>
             </md-menu-item>
             <md-menu-item ng-show="vm.showTrails">
                 <div layout="row" layout-align="start center"
-                     style="margin-left: 24px; margin-right: 8px; margin-bottom: 8px;" ng-click="$event.stopPropagation()">
+                     style="margin-left: 24px; margin-right: 8px; margin-bottom: 8px;">
                     <label style="width: 65px; font-weight: normal; margin-top: 4px;">Trail Dots:</label>
                     <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                         class="md-primary" title="Set the desired trail dots">
@@ -44,7 +42,7 @@
             </md-menu-item>
             <md-menu-item>
                 <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.redraw(false)"
-                             ng-init="vm.showGridLines = true" ng-click="$event.stopPropagation()">
+                             ng-init="vm.showGridLines = true">
                     <span>Show Gridlines</span>
                 </md-checkbox>
             </md-menu-item>
