--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -129,7 +129,7 @@
                     <span md-highlight-text="searchText">{{item}}</span>
                 </md-item-template>
             </md-autocomplete>
-            </form>            <div style="min-height: 5px; width: 100%; padding: 4px 8px;" ng-show="!vm.waitingForSearchResult"></div>
+            <div style="min-height: 5px; width: 100%; padding: 4px 8px;" ng-show="!vm.waitingForSearchResult"></div>
             <md-progress-linear style="padding: 4px 8px;" ng-show="vm.waitingForSearchResult" class="md-primary" md-mode="indeterminate"></md-progress-linear>
 
             <div flex class="sensor-search-name-list unselectable md-whiteframe-z1">
