--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -26,12 +26,12 @@
                     <span style="min-height: 25px; max-width: 140px;" title="Last Changed; Since: {{rec.since}}">{{rec.fromNow}}</span>
                     <span style="font-size: 26px;" flex><b>{{::rec.name}}</b></span>
                     <span class="flash-receptor-state"
-                          ng-class="{'receptor-stop-state': rec.state==='STOP', 'receptor-stow-state': rec.state==='STOW'}">
-                        <b>{{rec.state}}</b>
+                          ng-class="{'receptor-stop-state': vm.sensorValues[rec.name + '_mode'].value === 'STOP', 'receptor-stow-state': vm.sensorValues[rec.name + '_mode'].value === 'STOW'}">
+                        <b>{{vm.sensorValues[rec.name + '_mode'].value}}</b>
                     </span>
 
                     <div style="max-height: 20px; min-height: 20px; min-width: 100%">
-                        <p ng-show="rec.inhibited" class="inhibited">INHIBIT</p>
+                        <p ng-show="vm.sensorValues[rec.name + '_inhibited'].value" class="inhibited">INHIBIT</p>
                     </div>
                 </md-item-content>
             </md-item>
